--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint-config-prettier": "^6.11.0",
     "moment": "2.24.0",
     "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react-native": "^0.62.2",
     "react-native-gesture-handler": "1.5.2",
     "react-native-gravatar": "1.0.2",
     "react-native-reanimated": "1.4.0",
